--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,21 +5,14 @@ edition = "2024"
 
 [dependencies]
 rig-core = { version = "0.13", features = ["mcp"] }
-dotenv = "0.15"
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 anyhow = "1"
 serde_json = "1"
 tracing = "0.1"
 mcp-core = { version = "0.1.50", features = ["sse"] }
-tracing-subscriber = "0.3"
-async-trait = "0.1.88"
-clap = { version = "4.3", features = ["derive"] }
-reqwest = { version = "0.12.20", features = ["blocking", "json"] }
+reqwest = { version = "0.12.20", features = ["json"] }
 schemars = "0.8" # rig-core's tool system uses this for schema generation
-axum = "0.7"
-walkdir = "2"
 chrono = "0.4"
-thiserror = "1"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
 dirs = "5.0"
